--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,6 +4,7 @@
 }
 
 .maxWidthWrapper {
+  padding-bottom: 200px;
 }
 
 .header {
@@ -24,7 +25,13 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  right: 0;
+  top: 128px;
+  height: 100%;
+  min-height: 500px;
 }
 
 .controlColumn {
+  width: 50%;
 }
