--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,13 @@
 .footer {
-  position: relative;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
   padding: 64px;
   background: hsl(0deg, 0%, 5%);
   color: white;
   text-align: center;
 }
-
+a {
+  color: white;
+}
