--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,7 +4,6 @@
 }
 
 .maxWidthWrapper {
-  padding-bottom: 200px;
 }
 
 .header {
@@ -26,12 +25,22 @@
 
 .characterWrapper {
   position: fixed;
-  right: 0;
-  top: 128px;
-  height: 100%;
+  left: 60%;
+  top: 15%;
+  bottom: 5%;
   min-height: 500px;
 }
 
 .controlColumn {
   width: 50%;
+}
+
+.perspectiveBox {
+  background-color: hsl(195deg, 20%, 86%);
+  position: fixed;
+  z-index: -1;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 40%;
 }
